Lazy Bones 1.3.3
===============================================================================
* Changed default port for SVDRP to 6419

Lazy Bones 1.3.2
===============================================================================
* Fixed bug in timer editor. It showed the wrong channel.
* Improved setting of the start time, when switching between VPS on / off

Lazy Bones 1.3.1
===============================================================================
* Fixed bug with the warning, which is shown, when VPS is activated for a timer
* Changed default URL for recordings. Streaming of recordings with the 
  streamdev plugin should work out of the box 

Lazy Bones 1.3.0
===============================================================================
* Improved usage of colors to better support different Look & Feels
* Prettified the timer details view
* Prettified the recording details view
* Added configuration option to set the start hour of the timeline. Since a 
  normal day does not start a 0 and end at 23:59 for most of the people, it 
  makes sence to let it start at e.g. 5 and and end at 4:59. This way we have
  less timers, which span over two days. Also most of timers are nearer to
  the center of the screen.
* Added a clear line to the timeline, which marks midnight
* Added labels to the left and right of the midnight marker to make clear,
  which days are shown
* Some GUI polishing

Lazy Bones 1.2.1
===============================================================================
* Dropped support for VDR 1.2.*
* Some internal refactoring
* Improved detection of doppelpack timers
* Added search to recordings panel
* Fixed rendering bugs in the recordings tree

Lazy Bones 1.2.0
===============================================================================
* Added support for IPTV-channels
* Added workaround to svdrp4j to support Reelbox channels with conditional 
  access

Lazy Bones 1.1.0