@@ -58,6 +58,7 @@ LazyBones.error_retrieve_recordings        = Fehler beim Abrufen der Aufnahmen.
 LazyBones.expand_all                       = alles aufklappen
 LazyBones.experts                          = Experten
 LazyBones.expired                          = Diese Sendung ist schon gelaufen
+LazyBones.filter_channels                  = Sender filtern
 LazyBones.friday                           = Freitag
 LazyBones.general                          = Allgemein
 LazyBones.host                             = VDR Rechnername / IP
