@@ -58,6 +58,7 @@ LazyBones.error_retrieve_recordings        = Couldn't retrieve recordings from V
 LazyBones.expand_all                       = expand all
 LazyBones.experts                          = Experts
 LazyBones.expired                          = This program has expired
+LazyBones.filter_channels                  = Filter channels
 LazyBones.friday                           = Friday
 LazyBones.general                          = General
 LazyBones.host                             = VDR Hostname / IP
